<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


     <ImageView
             android:layout_width="match_parent"
             android:layout_height="114dp"
             app:srcCompat="@drawable/resistor"
             android:id="@+id/imageView"
             android:onClick="onButtonClicked"
     />
     <TextView
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:id="@+id/resultado"
             android:gravity="center"
             android:onClick="onButtonClicked"
             android:textSize="30sp"
             android:textColor="@color/black"

     />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="1° cifra"
                android:textColor="@color/blue"/>
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="2° cifra"
                android:textColor="@color/blue"/>
        <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="@string/Multiplicador"
                android:textColor="@color/blue"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/Tolerancia"
                android:textColor="@color/blue"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="@string/c0"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn0"
            android:height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:onClick="onButtonClicked"
    />
        <Button
                android:text="@string/c0"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn00"
                android:height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:onClick="onButtonClicked"
        />

        <Button
                android:text="@string/x1"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx0"
                android:height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="1dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:gravity="left"
                android:onClick="onButtonClicked"
        />

        <Button
                android:text="@string/t1"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnt1"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/maroon"
                android:onClick="onButtonClicked"

        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn1"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/maroon"
            android:textColor="@color/white"
            android:onClick="onButtonClicked"

    />

        <Button
                android:text="@string/c1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn01"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/maroon"
                android:textColor="@color/white"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/x10"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx1"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/maroon"
                android:textColor="@color/white"
                android:gravity="left"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/t2"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnt2"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/red"
                android:onClick="onButtonClicked"

        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Button
            android:text="@string/c2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn2"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/red"
            android:onClick="onButtonClicked"

    />

        <Button
                android:text="@string/c2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn02"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/red"
                android:onClick="onButtonClicked"

        />
        <Button
                android:text="@string/x100"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx2"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/red"
                android:gravity="left"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/t5"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnt5"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/gold"
                android:onClick="onButtonClicked"

        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Button
            android:text="@string/c3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn3"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/orange"
            android:onClick="onButtonClicked"

    />

        <Button
                android:text="@string/c3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn03"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/orange"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/x1000"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx3"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/orange"
                android:gravity="left"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/t10"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnt10"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/silver"
                android:onClick="onButtonClicked"

        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="@string/c4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn4"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/yellow"
            android:onClick="onButtonClicked"

    />

        <Button
                android:text="@string/c4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn04"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/yellow"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/x10000"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx4"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/yellow"
                android:gravity="left"
                android:onClick="onButtonClicked"

        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Button
            android:text="@string/c5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn5"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/green"
            android:onClick="onButtonClicked"

    />

        <Button
                android:text="@string/c5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn05"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/green"
                android:onClick="onButtonClicked"

        />

        <Button
                android:text="@string/x100000"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx5"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/green"
                android:gravity="left"
                android:onClick="onButtonClicked"

        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="@string/c6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn6"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/blue"
            android:onClick="onButtonClicked"

    />

        <Button
                android:text="@string/c6"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn06"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/blue"
                android:onClick="onButtonClicked"
        />

        <Button
                android:text="@string/x1000000"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:id="@+id/btnx6"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/blue"
                android:gravity="left"
                android:onClick="onButtonClicked"

        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Button
            android:text="@string/c7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn7"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/purple"
            android:onClick="onButtonClicked"

    />
        <Button
                android:text="@string/c7"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn07"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="2dp"
                android:background="@color/purple"
                android:onClick="onButtonClicked"

        />



    </LinearLayout>


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
            android:text="@string/c8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn8"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/gray"
            android:onClick="onButtonClicked"

    />
    <Button
            android:text="@string/c8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn08"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="2dp"
            android:background="@color/gray"
            android:onClick="onButtonClicked"

    />

    <Button
            android:text="@string/Calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bnCalcular"
            android:textSize="20sp"
            android:layout_marginStart="30dp"/>

</LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="@string/c9"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn9"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            android:onClick="onButtonClicked"

    />
        <Button
                android:text="@string/c9"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/btn09"
                android:layout_marginStart="30dp"
                android:background="@color/white"
                android:onClick="onButtonClicked"

        />
        <Button
                android:text="@string/Borrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnBorrar"
                android:textSize="20sp"
                android:layout_marginStart="30dp"/>


    </LinearLayout>





</LinearLayout>